--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -112,9 +112,10 @@ zstyle ':completion:*' matcher-list \
 zstyle ":conda_zsh_completion:*" sort-envs-by-time true
 zstyle ":conda_zsh_completion:*" show-global-envs-first true
 
-fpath+=~/.fpath
-{{- if eq .chezmoi.os "darwin" }}
-fpath+=/opt/homebrew/share/zsh/site-functions
+{{ if eq .chezmoi.os "darwin" -}}
+{{   include ".zshrc_patch_darwin" }}
 {{- else if eq .chezmoi.os "linux" }}
+{{   include ".zshrc_patch_linux" }}
 {{- end }}
+
 autoload -U compinit; compinit
