--- a/dot_zprofile.tmpl
+++ b/dot_zprofile.tmpl
@@ -11,6 +11,12 @@ export FZF_DEFAULT_OPTS="--height 40% --layout=reverse --border --prompt '> ' --
 # GPG_TTY
 export GPG_TTY=$(tty)
 
+# XDGs. https://wiki.archlinux.org/title/XDG_Base_Directory
+export XDG_CONFIG_HOME=$HOME/.config
+export XDG_DATA_HOME=$HOME/.local/share
+export XDG_STATE_HOME=$HOME/.local/state
+export XDG_CACHE_HOME=$HOME/.cache
+
 {{- if eq .chezmoi.os "darwin" }}
 {{   template "zprofile_darwin.tmpl" . }}
 {{- else if eq .chezmoi.os "linux" }}
