add `ssh` and `ssh-add` aliases for wsl2

--- a/.chezmoitemplates/gitconfig_linux.tmpl
+++ b/.chezmoitemplates/gitconfig_linux.tmpl
@@ -6,6 +6,9 @@
     excludesfile = {{ joinPath .XDG_CONFIG_HOME "git/ignore" | quote }}
     autocrlf = input
     quotepath = false
+{{   if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
+    sshCommand = ssh.exe
+{{   end }}
 [init]
 	defaultBranch = main
 [commit]
