--- a/.chezmoitemplates/gitconfig_windows.tmpl
+++ b/.chezmoitemplates/gitconfig_windows.tmpl
@@ -1,7 +1,11 @@
 [user]
     name = Neptune Tan
-    email = lifei@smyfinancial.com
+    email = 32198721+c3b2a7@users.noreply.github.com
     signingkey = ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIOg4JNc0p23h651BmlnZIurOjTNCc6nMox18sUTp60gP
+[includeIf "hasconfig:remote.*.url:**e.coding.smycloud.com**/**"]
+	path = ./smy-user
+[includeIf "hasconfig:remote.*.url:**//e.coding.smycloud.com**/**"]
+	path = ./smy-user
 [core]
     excludesfile = {{ joinPath .XDG_CONFIG_HOME "git/ignore" | quote }}
     autocrlf = true
@@ -13,6 +17,7 @@
     format = ssh
 [gpg "ssh"]
     allowedSignersFile = {{ joinPath .XDG_CONFIG_HOME "git/allowed-signers" | quote }}
+    program = "C:/Users/l00998/AppData/Local/1Password/app/8/op-ssh-sign.exe"
 [push]
 	autoSetupRemote = true
 [http]
