update zprofile to add zig path

--- a/.chezmoitemplates/zprofile_darwin.tmpl
+++ b/.chezmoitemplates/zprofile_darwin.tmpl
@@ -50,3 +50,6 @@ export GO122=$DEV_HOME/go1.22
 export GOROOT=$GO122
 export GOPATH=$DEV_HOME/gopath
 export PATH=$GOROOT/bin:$GOPATH/bin:$PATH
+# Zig
+export PATH=$DEV_HOME/zig:$PATH
+
