--- a/.chezmoitemplates/zprofile_darwin.tmpl
+++ b/.chezmoitemplates/zprofile_darwin.tmpl
@@ -51,5 +51,5 @@ export GOROOT=$GO122
 export GOPATH=$DEV_HOME/gopath
 export PATH=$GOROOT/bin:$GOPATH/bin:$PATH
 # Zig
-export PATH=$DEV_HOME/zig:$PATH
+export PATH=$DEV_HOME/zig:$DEV_HOME/zig/bin:$PATH
 
