chore(git): Add gpg sign to tag

--- a/.chezmoitemplates/gitconfig_windows.tmpl
+++ b/.chezmoitemplates/gitconfig_windows.tmpl
@@ -13,6 +13,8 @@
     sshCommand = "C:/Windows/System32/OpenSSH/ssh.exe"
 [commit]
     gpgsign = true
+[tag]
+    gpgsign = true
 [gpg]
     format = ssh
 [gpg "ssh"]
